fix(QBtn): stretch is for vertical stretch, so do not grow in horizontal direction #7406

--- a/ui/src/components/btn/QBtn.styl
+++ b/ui/src/components/btn/QBtn.styl
@@ -92,11 +92,6 @@
   &--rounded
     border-radius: $button-rounded-border-radius
 
-  &--stretch
-    border-radius: 0
-    align-self: stretch
-    flex-grow: 1
-
   &--round
     border-radius: 50%
 
